pydata_basics are to be added

--- a/notebooks/pydata02-python-basics-1.ipynb
+++ b/notebooks/pydata02-python-basics-1.ipynb
@@ -1918,7 +1918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 가변(mutable) 객체와 불변(immutable) 객체"
+    "### 변경 가능한(mutable) 객체와 변경 불가능한(immutable) 객체"
    ]
   },
   {
@@ -1948,7 +1948,7 @@
    ],
    "source": [
     "a_list = ['foo', 2, [4, 5]]\n",
-    "a_list[2] = (3, 4)\n",
+    "a_list[2] = (3, 4)ㄴ\n",
     "\n",
     "a_list"
    ]
