--- a/notebooks/pydata03-python-basics-2.ipynb
+++ b/notebooks/pydata03-python-basics-2.ipynb
@@ -19,8 +19,7 @@
    "metadata": {},
    "source": [
     "* 스칼라 자료형\n",
-    "* 제어문\n",
-    "* `range()` 함수"
+    "* 제어문: `if` 조건문, `for` 반복문, `while` 반복문"
    ]
   },
   {
@@ -2348,269 +2347,6 @@
     "    x = x // 2\n",
     "    \n",
     "print(total)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## `range()` 함수"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "규칙성을 가진 정수들의 모음(collection)을 반환한다.\n",
-    "반환된 값은 이터러블 객체이며, \n",
-    "리스트와 유사하게 작동한다.\n",
-    "\n",
-    "예를 들어, 0부터 9까지의 정수들로 이루어진 `range` 객체는 다음과 같이 생성한다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range(0, 10)"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "range(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__주의사항:__ 첫째 인자는 구간의 시작을, 둘째 인자는 구간의 끝보다 하나 큰 값을 가리킨다.\n",
-    "따라서 위에서 9가 아닌 그보다 1이 큰 10을 사용했음에 주의하라.\n",
-    "\n",
-    "반환된 값의 자료형은 `range` 이다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(range(10))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`range(0, 10)` 안에 포함된 항목을 `for` 반복문을 이용하여 확인할 수 있다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "for item in range(0, 10):\n",
-    "    print(item)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "리스트로 형변환을 하면 보다 명확하게 확인된다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(10))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "0에서 19까지의 정수중에서 짝수만으로 이루어진 `range` 객체는 다음과 같이 \n",
-    "스텝(step) 크기 2를 셋째 인자로 지정하여 생성한다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(0, 20, 2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "스텝 크기를 음수로 지정하면 크기 역순으로 이루어진 `range` 객체를 생성한다.\n",
-    "\n",
-    "__주의사항:__ 음수 스텝을 사용할 경우 둘째 인자는 원하는 구간보다 1이 작은 값을 사용해야 한다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 4, 3, 2, 1]"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(5, 0, -1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 3, 1]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(5, 0, -2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### __`range()` 함수 주요 활용법 1__\n",
-    "\n",
-    "리스트 또는 튜플의 길이 정보를 이용하여 인덱싱을 활용하는 방식이 많이 사용된다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq = [1, 2, 3, 4]\n",
-    "for i in range(len(seq)):\n",
-    "    val = seq[i]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### __`range()` 함수 주요 활용법 2__\n",
-    "\n",
-    "매우 많은 항목을 담은 리스트 대신에 `range` 객체를 `for` 반복문과 함께 사용한다.\n",
-    "이유는 `range` 객체가 리스트보다 훨씬 적은 메모리를 사용하기 때문이다.\n",
-    "(이에 대한 근거는 여기서는 다루지 않는다.)\n",
-    "\n",
-    "예를 들어, 아래 코드는 0부터 99,999 까지의 정수 중에서 3 또는 5의 배수를 모두 더한다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2333316668\n"
-     ]
-    }
-   ],
-   "source": [
-    "sum = 0\n",
-    "\n",
-    "for i in range(100000):\n",
-    "    # %는 나머지 연산자\n",
-    "    if i % 3 == 0 or i % 5 == 0:\n",
-    "        sum += i\n",
-    "        \n",
-    "print(sum)"
    ]
   }
  ],
