python01 is being prepared

--- a/notebooks/python01.ipynb
+++ b/notebooks/python01.ipynb
@@ -18,9 +18,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 변수 선언\n",
-    "* 기본 자료형: 정수, 부동소수점, 부울 자료형\n",
-    "* 특정 자료형과 관련하여 많이 사용되는 함수와 메소드 살펴보기 "
+    "* 컴퓨터 프로그램이란?\n",
+    "* 파이썬 언어 소개\n",
+    "* 변수와 변수 선언\n",
+    "* 기본 자료형: 정수, 부동소수점, 문자열, 부울 자료형\n",
+    "* 스칼라 자료형"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 컴퓨터 프로그램이란?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__컴퓨터 프로그램__(computer programs)은 컴퓨터가 해야 할 일을 \n",
+    "특정 __프로그래밍 언어__를 이용하여 작성한 __명령문__(commands)으로 이루어진 문장이라 할 수 있다.\n",
+    "각각의 명령문이 하는 일은 기본적으로 값을 조작하거나 새로운 값을 생성한다.\n",
+    "즉, 컴퓨터 프로그램은 주어진 값을 어떻게 조작하고 어떤 값을 생성할 것인가를 명시한 매뉴얼 문서이다. \n",
+    "\n",
+    "언어를 배울 때 어휘와 문장 구성을 배워야 하듯이 컴퓨터 프로그래밍은\n",
+    "명령문의 구성 요소와 명령문 사용법을 학습하는 것으로 시작한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 프로그램, 코드, 명령문"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "프로그램은 컴퓨터 프로그램을 가리킨다. 그리고 경우에 따라 프로그램, 코드, 명령문 표현을 특별한 정의 없이 사용한다.\n",
+    "프로그램은 완성된 컴퓨터 프로그램, 코드는 프로그램의 일부, 명령문은 짧은 코드 정도로 이해할 수 있다.\n",
+    "반면에 소스코드는 완성된 프로그램의 원본 코드 전체를 의미한다."
    ]
   },
   {
@@ -34,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "파이썬은 __스크립트 언언__이다. 즉, 명령문을 작성한 후에 한 줄씩 바로 실행시킬 수 있다."
+    "파이썬은 __스크립트 언어__(script language)이다. 즉, 명령문을 작성한 후에 한 줄씩 바로 실행시킬 수 있다."
    ]
   },
   {
@@ -56,26 +94,21 @@
     "* IPython 명령 프롬프트: `In [1]:`\n",
     "\n",
     "여기서는 IPython 명령 프롬프트이며, 숫자는 실행된 명령문들의 순서를 나타낸다.\n",
-    "숫자가 클 수록 나중에 실행되었다는 의미일 뿐이며 다른 특별한 역할은 없다."
+    "숫자가 클 수록 나중에 실행되었다는 의미이다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제: 출력하기"
+    "#### 명령문 예제: 출력하기"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`print()` 함수를 이용하여 쉘 화면에 지정된 문자열을 출력해서 보여주고 싶을 때 사용하는 함수이다.\n",
-    "함수는 지정된 양식의 인자를 사용하여 호출하는 방식으로 사용된다.\n",
-    "예를 들어, 아래 명령문은 단순히 `\"Hello Python!\"` 이란 문자열을 화면에 출력하고자 할 때 \n",
-    "사용되는 명령문이다.\n",
-    "\n",
-    "__참고:__ 큰따옴표 또는 작은따옴표로 감싸인 문자들의 나열을 __문자열__이라 부른다."
+    "아래 코드는 `\"Hello Python!\"` 이란 문자열을 화면에 출력하는 명령문이다. "
    ]
   },
   {
@@ -99,7 +132,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제: 변수 선언"
+    "위 코드는 하나의 명령문으로 구성되었으며 `print()` 함수를 이용한다. \n",
+    "이와같이 함수를 특정 인자와 함께 실행하는 것을 __함수 호출__(function call)이라 한다.\n",
+    "\n",
+    "__참고:__ 큰따옴표 또는 작은따옴표로 감싸인 문자들의 나열을 __문자열__이라 부른다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 함수(functions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__함수__(function)는 지정된 인자를 사용하여 특정 계산을 실행한다.\n",
+    "프로그래밍에서의 함수와 수학에서의 함수는 사용법과 모양에 있어서 서로 다르지만 \n",
+    "기본적으로 지정된 값을 이용하여 계산을 실행한다는 점에서 동일한 개념이다.\n",
+    "다만 `print()` 함수가 하는 일에서 보았듯이 수학의 함수와 사용법이 많이 다르기에\n",
+    "익숙해지는 데에 조금 시간이 걸릴 수 있다. \n",
+    "\n",
+    "`print()` 함수는 무언가를 계산하는 것 이외에 지정된 문자열을 화면에 출력하는 일도 수행한다.\n",
+    "이처럼 계산 이외에 다른 일을 하는 것을 부수 효과(side effect)라고 한다.\n",
+    "\n",
+    "__참고:__ 엄밀히 따지면 이런 작업도 계산이라고 할 수 있지만, 수학자에게는 매우 생소하게 다가올 것이다.\n",
+    "부수 효과를 참고서에 따라 __부작용__이라 부르는 경우도 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 명령문 예제: 변수 선언"
    ]
   },
   {
@@ -156,14 +223,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__주의사항:__ 변수 선언에 사용되는 등호 기호(`=`) 때문에 `변수와 값이 동일하다` 로 이해하면 안된다.\n",
+    "변수 선언에 사용되는 등호 기호(`=`) 때문에 `변수와 값이 동일하다` 로 이해하면 안된다.\n",
     "여기서는 동일하다의 의미가 아니라 변수가 지정된 값을 가리킨다는 의미미며, \n",
-    "변수라는 말의 의미에서 알 수 있듯이 변수가 가리키는 값은 언제든지 변경될 수 있다."
+    "변수라는 말의 의미에서 알 수 있듯이 변수가 가리키는 값은 언제든지 변경될 수 있다.\n",
+    "\n",
+    "아래 코드는 변수 `a`가 가리키는 값을 5로 변경한다.\n",
+    "\n",
+    "__참고:__ 만약에 `a = 2`를 `a`와 2는 같다라고 해석한다면 절대로 불가능한 일을 하게되는 셈이다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,19 +269,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제: 연산자 활용"
+    "### 값과 표현식"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "파이썬을 계산기처럼 활용할 수도 있다."
+    "파이썬은 여러 종류의 값을 저장하고 계산할 수 있으며,\n",
+    "값을 표현하기 위한 다양한 방식을 지원한다.\n",
+    "\n",
+    "파이썬은 몇 가지 종류의 값을 기본으로 제공하며, 함수를 이용하여 \n",
+    "무한히 많은 값을 표현하고 다룰 수 있는 기능을 제공한다.\n",
+    "\n",
+    "가장 단순한 값은 정수, 유리수이며, 사칙연산 등을 이용하여 다양한 방식으로 값을 표현할 수 있다.\n",
+    "값을 표현하는 식을 __표현식__(expressions)이라 하며,\n",
+    "표현식은 명령문이 실행되면 모두 특정 값으로 계산된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 예제: 사칙연산 표현식"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "사칙연산을 표현하고 필요에 따라 계산한다.\n",
+    "또한 계산된 값을 이용하여 변수를 선언하고 언제든지 필요할 때 재활용할 수 있다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +313,7 @@
        "5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +333,7 @@
        "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +354,7 @@
        "26.7"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +381,7 @@
        "1100"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,46 +401,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.4"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "7 / 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1.4"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "-7/5"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -357,6 +411,46 @@
       ]
      },
      "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7 / 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-7/5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +477,7 @@
        "1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +497,7 @@
        "1.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +517,7 @@
        "-2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +537,7 @@
        "-2.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +564,7 @@
        "2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -490,60 +584,13 @@
        "3"
       ]
      },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "-7%5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.0"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "-7.0%5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "지수 계산은 `**` 연산자를 사용한다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
      "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2 ** 3"
+    "-7%5"
    ]
   },
   {
@@ -563,6 +610,53 @@
     }
    ],
    "source": [
+    "-7.0%5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "지수 계산은 `**` 연산자를 사용한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "9 ** 0.5"
    ]
   },
@@ -570,25 +664,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 파이썬 프로그램이란?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "컴퓨터 프로그램은 지정된 값을 활용하여 원하는 결과를 생성하는 과정을 자동으로 처리하기 위한 \n",
-    "명령문들의 나열로 생각할 수 있다.\n",
-    "\n",
-    "컴퓨터 프로그램이 다룰 수 있는 값은 다양한 형식으로 제공되지만, 여기서는 특정 데이터를 변환하여\n",
-    "얻어진 값만 대상으로 삼는다.\n",
-    "따라서 컴퓨터 프로그램은 아래 일들을 처리하는 연속된 명령문들의 모음으로 이해될 수 있다.\n",
-    "\n",
-    "* 저장\n",
-    "* 연산\n",
-    "* 출력\n",
-    "\n",
-    "파이썬 프로그램은 파이썬 프로그래밍 언어로 작성된 컴퓨터 프로그램이다. \n",
     "이제부터 파이썬 프로그램을 구성하는 명령문의 기본 요소를 하나씩 살펴보자."
    ]
   },
@@ -806,7 +881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 자료형"
+    "### 기본 자료형"
    ]
   },
   {
@@ -814,11 +889,13 @@
    "metadata": {},
    "source": [
     "파이썬에서 사용되는 모든 값은 특정 __자료형__(data type)에 속한다.\n",
-    "지금까지 다룬 값들의 자료형은 다음과 같다.\n",
+    "지금까지 다룬 값들의 자료형은 다음과 같다. \n",
     "\n",
     "* `int`: 2, 3 등의 정수\n",
     "* `float`: 1.2, 5.0 등의 유리수\n",
-    "* `str`: `\"dog\"`, `\"python\"` 등의 문자열"
+    "* `str`: `\"dog\"`, `\"python\"` 등의 문자열\n",
+    "\n",
+    "파이썬에서 기본으로 제공하는 이외에 더 많이 있으며 앞으로 차차 만나게 될 것이다."
    ]
   },
   {
@@ -935,7 +1012,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 연산"
+    "## 연산"
    ]
   },
   {
@@ -1032,7 +1109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 문자열 연산"
+    "### 문자열 연산"
    ]
   },
   {
@@ -1120,7 +1197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 연산자 우선순위"
+    "### 연산자 우선순위"
    ]
   },
   {
@@ -2157,7 +2234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 형변환"
+    "### 형변환"
    ]
   },
   {
@@ -2200,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2286,7 @@
        "4"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3256,7 +3333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
