python01 is ready

--- a/notebooks/python01.ipynb
+++ b/notebooks/python01.ipynb
@@ -881,7 +881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 기본 자료형"
+    "### 변수의 자료형"
    ]
   },
   {
@@ -1744,9 +1744,22 @@
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "puppy = True"
+    "puppy = True\n",
+    "\n",
+    "puppy"
    ]
   },
   {
@@ -1755,29 +1768,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(puppy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
        "bool"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,223 +1809,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do I have a puppy? True\n",
-      "Do I have puppies? False\n"
+      "강아지가 있나요? True\n",
+      "여러 마리 강아지인가요? False\n"
      ]
     }
    ],
    "source": [
-    "print(\"Do I have a puppy?\", puppy)\n",
-    "print(\"Do I have puppies?\", puppies)"
+    "print(\"강아지가 있나요?\", puppy)\n",
+    "print(\"여러 마리 강아지인가요?\", puppies)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "주의: 위에서 사용된 print함수의 사용법을 기억해둔다. print 함수는 인자를 여러 개 받을 수 있으며 그 값들을 차례대로 동시에 한 줄에 출력한다. 각각의 값들은 스페이스(space)로 구분되어진다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 부울 연산자"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`and`, `not`, `or` 세 개의 연산자를 이용하여 부울 연산을 할 수 있다. 각 연산자의 의미는 일반적으로 알려진 것과 동일하다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "True and True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "True and False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "부울 자료형의 변수를 이용하여 연산을 수행할 수도 있다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "puppy and puppies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not puppies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not puppy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 부울 연산자 우선순위"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "not 연산자의 우선순위가 가장 높다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "puppy and not puppies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "puppy or puppies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "False or False"
+    "__주의사항:__ 위에서 사용된 `print()` 함수의 사용법을 기억해둔다. \n",
+    "`print()` 함수는 인자를 여러 개 받을 수 있으며 그 값들을 동시에 한 줄에 출력한다. \n",
+    "각각의 값은 스페이스(space)로 구분된다."
    ]
   },
   {
@@ -2050,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +1862,7 @@
        "True"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2070,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +1882,7 @@
        "False"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2090,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +1902,7 @@
        "True"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2110,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2119,13 +1922,231 @@
        "False"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "4 != 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 > 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 > 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 >= 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 부울 연산자와 부울 표현식"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`and`, `not`, `or` 세 개의 __부울 연산자__(Boolean operators)를 이용하여 부울 연산을 할 수 있다.\n",
+    "각 연산자의 의미는 일반적으로 알려진 것과 동일하다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "부울 자료형의 변수와 부울 연산자를 이용하여 다양한 표현식을 정의할 수 있다.\n",
+    "__부울 표현식__(Boolean expressions)은 부울 값으로 계산되는 표현식을 가리킨다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puppy and puppies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not puppies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not puppy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 부울 연산자 우선순위"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`not` 연산자의 우선순위가 가장 높고, `and`와 `or`은 동일한 우선순위를 갖는다.\n",
+    "따라서 기본적으로 왼편에 위치한 연산자부터 차례대로 계산한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puppy and not puppies"
    ]
   },
   {
@@ -2145,7 +2166,7 @@
     }
    ],
    "source": [
-    "4 > 2"
+    "puppy and (not puppies)"
    ]
   },
   {
@@ -2165,7 +2186,7 @@
     }
    ],
    "source": [
-    "4 > 4"
+    "not puppy and puppies"
    ]
   },
   {
@@ -2185,12 +2206,61 @@
     }
    ],
    "source": [
-    "4 >= 4"
+    "not (puppy and puppies)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat and puppies or puppy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(cat and puppies) or puppy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2199,20 +2269,20 @@
        "False"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "False or False"
+    "cat and (puppies or puppy)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `if` 조건문"
+    "#### 부울 값과 `if` 조건문"
    ]
   },
   {
@@ -2223,7 +2293,7 @@
     "기본 형식은 다음과 같다.\n",
     "\n",
     "```python\n",
-    "if 부울값:\n",
+    "if 부울표현식:\n",
     "    명령문\n",
     "else:\n",
     "    조건문\n",
@@ -2250,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2281,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2391,7 @@
        "14"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2332,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2341,13 +2411,20 @@
        "14"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "abs(b - a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__참고:__ `if` 조건문의 보다 다양한 활용법은 나중에 자세히 다룬다."
    ]
   },
   {
@@ -2397,7 +2474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2483,7 @@
        "4"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2431,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2517,7 @@
        "2.0"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2458,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2467,7 +2544,7 @@
        "2.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2480,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2489,7 +2566,7 @@
        "2"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2507,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2516,7 +2593,7 @@
        "2.0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2543,7 +2620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2552,7 +2629,7 @@
        "False"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2563,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2649,7 @@
        "True"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2583,7 +2660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2592,7 +2669,7 @@
        "True"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2626,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2706,7 +2783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
